--- a/Source/TrackableEntities.EF.6/TrackableEntities.EF.6.csproj
+++ b/Source/TrackableEntities.EF.6/TrackableEntities.EF.6.csproj
@@ -1,13 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>net48;net5.0;net6.0;netstandard2.1</TargetFrameworks>
     <RootNamespace>TrackableEntities.EF._6</RootNamespace>
-    <Nullable>enable</Nullable>
-	<Version>2.1.0.0</Version>
-    <AssemblyVersion>2.1.0.0</AssemblyVersion>
-    <FileVersion>2.1.0.0</FileVersion>
-    <InformationalVersion>2.1.0.0</InformationalVersion>		
+	<Version>2.1.1</Version>
+    <AssemblyVersion>2.1.1.0</AssemblyVersion>
+    <FileVersion>2.1.1.0</FileVersion>
+    <InformationalVersion>2.1.1.0</InformationalVersion>		
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
